--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,9 +37,18 @@
 		{%- js %}{% include "node_modules/@zachleat/heading-anchors/heading-anchors.js" %}{% endjs %}
 	</head>
 	<body>
-		<a href="#skip" class="visually-hidden">Skip to main content</a>
+
+
+          <div id="heroBanner">
+          </div><!--heroBanner ends-->
+
+	  <a href="#skip" class="visually-hidden">Skip to main content</a>
+
 
 		<header>
+
+			<a href="/" class="home-link">{{ metadata.title }}</a>
+
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
@@ -50,6 +59,7 @@
 				</ul>
 			</nav>
 		</header>
+
 
 		<main id="skip">
 			<heading-anchors>
