--- a/public/css/index.css
+++ b/public/css/index.css
@@ -57,7 +57,7 @@ html {
 	overflow-y: scroll;
 }
 body {
-	max-width: 90em;
+	max-width: 80em;
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
@@ -134,6 +134,12 @@ header {
 	border-top: 1px dashed var(--color-gray-20);
 	padding: 1em 0;
 }
+
+.testimg {
+    background: url("/img/dotted-border.png") bottom left repeat-x;
+}
+
+
 .links-nextprev > * {
 	flex-grow: 1;
 }
@@ -281,6 +287,8 @@ header {
 	padding: 0;
 	margin: 0;
 }
+
+
 .post-metadata time {
 	margin-right: 1em;
 }
@@ -295,9 +303,4 @@ header {
   margin-right: 1em;
 }
 
-// Mini hero for posts
-#postHeader {
-   height: 2em;
-   background:url('http://willprogramforfood.com/largeHeaderImages/rotate.php') top center no-repeat;
-}
 
